--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         <div id="homebtn">
                             <button class="btn">
                                 <ul>
-                                    <li><a href="https://drive.google.com/file/d/1uO5jdb-ZGnCZ5ZcJ8fAUrKswoL1EIMfC/view?usp=sharing" download target="_blank">Download Resume</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1uO5jdb-ZGnCZ5ZcJ8fAUrKswoL1EIMfC/view?usp=sharing"
+                                            download target="_blank">Download Resume</a></li>
                                 </ul>
                             </button>
                             <button class="btn">
@@ -90,7 +91,7 @@
 
                         <div class="hover-container">
                             <span class="skill_info">
-                                <strong>Programming Languages:</strong> C, C++, JavaScript, TypeScript, Python 
+                                <strong>Programming Languages:</strong> C, C++, JavaScript, TypeScript, Python
                             </span>
                             <div class="skill-card">
                                 <span>C/C++</span>
@@ -141,7 +142,8 @@
                         </div>
                         <div class="hover-container">
                             <span class="skill_info">
-                                <strong>Web Technologies:</strong> HTML5, CSS3, React.js, Node.js, Express.js, RESTful APIs, 
+                                <strong>Web Technologies:</strong> HTML5, CSS3, React.js, Node.js, Express.js, RESTful
+                                APIs,
                             </span>
                             <div class="skill-card">
                                 <span>HTML5</span>
@@ -259,7 +261,8 @@
                     <div id="rescontent">
                         <p>I'm a passionate software developer with expertise in C, C++, and a solid
                             foundation in Data Structures and Algorithms. My skills span both front-end (HTML5, CSS3,
-                            JavaScript, React) and back-end (Node.Js, Express.js, MongoDB, MySQL, Postman) development, enabling me to build
+                            JavaScript, React) and back-end (Node.Js, Express.js, MongoDB, MySQL, Postman) development,
+                            enabling me to build
                             comprehensive
                             and efficient web applications. I thrive on problem-solving and continuously learning
                             new technologies to enhance my craft. I'm eager to contribute to innovative and
@@ -281,10 +284,12 @@
                                 <div>
                                     <span class="subhead">2021-Present</span>
                                     <h3>NATIONAL INSTITUTE OF TECHNOLOGY KARNATAKA, SURATHKAL</h3>
-                                    <span class="descrip">Bachelor of Technology (Electronics and Communication Engineering)</span>
+                                    <span class="descrip">Bachelor of Technology (Electronics and Communication
+                                        Engineering)</span>
                                     <p class="subdes">CGPA: 6.80</p>
                                 </div>
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSt6E9j1alP1WPbeYjvtB2H3E_SPONx5DpYyGiXzsWyXdzLkJRAnceMgGdJaebN0iZmRcA&usqp=CAU" alt="NITK Logo" style="height: 90px; width: 90px; object-fit: contain;">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSt6E9j1alP1WPbeYjvtB2H3E_SPONx5DpYyGiXzsWyXdzLkJRAnceMgGdJaebN0iZmRcA&usqp=CAU"
+                                    alt="NITK Logo" style="height: 90px; width: 90px; object-fit: contain;">
                             </div>
                         </div>
                     </div>
@@ -298,11 +303,12 @@
                                     <span class="descrip">INTERMEDIATE</span>
                                     <p class="subdes">Percentage: 89.2</p>
                                 </div>
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s" alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s"
+                                    alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
                             </div>
                         </div>
                     </div>
-                
+
                     <div class="col_6">
                         <div class="resume-wrap">
                             <div style="display: flex; justify-content: space-between; align-items: center;">
@@ -312,7 +318,8 @@
                                     <span class="descrip">HIGH SCHOOL</span>
                                     <p class="subdes">Percentage: 90.8</p>
                                 </div>
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s" alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJNLDV-7TBpy9BgCZG7njcRyvCv7tFUtvSvg&s"
+                                    alt="JNV Logo" style="height: 90px; width: 90px; object-fit: contain;">
                             </div>
                         </div>
                     </div>
@@ -328,25 +335,31 @@
                     <div class="col_6">
                         <div class="resume-wrap ">
                             <span class="subhead">VIDEOMELA</span>
-                            <p> Developed a high-performance video-sharing platform, scalable for 1000+ daily users, leveraging Redux Toolkit for
+                            <p> Developed a high-performance video-sharing platform, scalable for 1000+ daily users,
+                                leveraging Redux Toolkit for
                                 optimized state management and faster rendering.</p>
-                            <p> Architected a secure backend with JWT-based authentication, bcrypt encryption, and MongoDB, ensuring
+                            <p> Architected a secure backend with JWT-based authentication, bcrypt encryption, and
+                                MongoDB, ensuring
                                 seamless user data protection and fast query execution.</p>
-                            <p> Integrated Cloudinary, reducing media upload latency by 30% and ensuring smooth video streaming under heavy
+                            <p> Integrated Cloudinary, reducing media upload latency by 30% and ensuring smooth video
+                                streaming under heavy
                                 traffic.</p>
-                            <a class="project-link"
-                                href="https://github.com/vikrant48/Video_Mela_frontend">View Project</a>
+                            <a class="project-link" href="https://github.com/vikrant48/Video_Mela_frontend">View
+                                Project</a>
                         </div>
                     </div>
 
                     <div class="col_6">
                         <div class="resume-wrap ">
                             <span class="subhead">NEWSMELA</span>
-                            <p> Built a dynamic news aggregation platform with real-time updates, allowing users to filter news by categories, check
+                            <p> Built a dynamic news aggregation platform with real-time updates, allowing users to
+                                filter news by categories, check
                                 live weather updates, and use a currency converter, all powered by multiple APIs.</p>
-                            <p> Optimized frontend performance by implementing efficient state management, lazy loading, and API caching, improving
+                            <p> Optimized frontend performance by implementing efficient state management, lazy loading,
+                                and API caching, improving
                                 data fetching speed by 40%.</p>
-                            <p> Enhanced user experience by adding dark mode, mobile-first design, and seamless responsiveness across all devices.</p>
+                            <p> Enhanced user experience by adding dark mode, mobile-first design, and seamless
+                                responsiveness across all devices.</p>
                             <a class="project-link" href="https://github.com/vikrant48/NewsMela">View Project</a>
 
                         </div>
@@ -455,7 +468,6 @@
                         <div class="btn_cnt">
                             <button class="btn  text-center" id="sm" type="submit">Send Message</button>
                         </div>
-
                     </form>
                 </div>
             </div>
@@ -503,108 +515,110 @@
         </div>
 
     </footer>
-</body>
-<script>
-    let img = document.getElementById("profilePic");
-    let modal = document.getElementById("imgModal");
-    let modalImg = document.getElementById("modalImg");
-    let span = document.getElementsByClassName('close')[0]
+    <script>
+        // for image 
+        let img = document.getElementById("profilePic");
+        let modal = document.getElementById("imgModal");
+        let modalImg = document.getElementById("modalImg");
+        let span = document.getElementsByClassName('close')[0]
 
-    img.onclick = function () {
-        modal.style.display = "block";
-        modalImg.src = this.src;
-    }
-    span.onclick = function () {
-        modal.style.display = "none";
-    }
-    window.onclick = function (event) {
-        if (event.target == modal) {
+        img.onclick = function () {
+            modal.style.display = "block";
+            modalImg.src = this.src;
+        }
+        span.onclick = function () {
             modal.style.display = "none";
         }
-    }  
-</script>
-<script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzTtn3GpBd5tUvAm0Te8xxpn4rIu1G4IiXc-fq-51pkl0LnqrwhFlgQh837Bw59jGFM/exec'
-    const form = document.forms['submit-to-google-sheet']
-    const msg = document.getElementById("msg")
-
-    form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-            .then(response => {
-                msg.innerHTML = "Your message sent successfully"
-                setTimeout(function () {
-                    msg.innerHTML = ""
-                }, 1000)
-                form.reset()
-            })
-
-            .catch(error => console.error('Error!', error.message))
-    })
-</script>
-<script>
-    const hamburger = document.querySelector('.hamburger');
-    const navLinks = document.querySelector('#navright ul');
-
-    hamburger.addEventListener('click', () => {
-        hamburger.classList.toggle('active');
-        navLinks.classList.toggle('show');
-    });   
-</script>
-<script>
-    const webElement = document.getElementById('web');
-
-    function resetAnimation() {
-        webElement.style.animation = 'none';
-        webElement.offsetHeight; // Trigger reflow
-        webElement.style.animation = 'typing 3s steps(20, end), blink-caret .75s step-end infinite';
-    }
-
-    // Reset animation every 3.75 seconds 
-    setInterval(resetAnimation, 3750);
-</script>
-<script>
-    async function fetchData() {
-        const resp = await fetch('https://leetcode-api-faisalshohag.vercel.app/vikrantlee')
-        const data = await resp.json()
-
-        console.log(data)
-
-        // Populate data
-        document.getElementById('totalSolved').textContent = data.totalSolved;
-        document.getElementById('totalques').textContent = `Out of ${data.totalQuestions}`;
-        document.getElementById('solved').innerHTML = `<i class="fa-solid fa-check" style="color: #63E6BE; margin-right: 5px;"></i> Solved`;
-        // document.getElementById('attempting').textContent = `${data.totalSubmissions[0].submissions - data.totalSolved} Attempting`;
-
-        // Populate Easy, Medium, Hard stats
-        document.getElementById('easySolved').textContent = `${data.easySolved}/${data.totalEasy}`;
-        document.getElementById('mediumSolved').textContent = `${data.mediumSolved}/${data.totalMedium}`;
-        document.getElementById('hardSolved').textContent = `${data.hardSolved}/${data.totalHard}`;
-
-
-    }
-    fetchData()
-</script>
-<script>
-    async function fetchgitdata() {
-        try {
-            const resp = await fetch('https://api.github.com/users/vikrant48')
-            if (!resp.ok) throw new Error("Network response was not ok");
-
-            const data = await resp.json()
-            console.log(data)
-
-            document.getElementById('avatar').src = data.avatar_url
-            document.getElementById('bio').textContent = data.bio
-            document.getElementById('public_repos').textContent = data.public_repos
-            document.getElementById('followers').textContent = data.followers
-            document.getElementById('created_on').textContent = new Date(data.created_at).toLocaleDateString()
-        } catch (error) {
-            console.error("Failed to fetch GitHub data:", error)
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
-    }
-    fetchgitdata()
 
-</script>
+        // for hunberger
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('#navright ul');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('show');
+        });
+
+        // home animation 
+        const webElement = document.getElementById('web');
+
+        function resetAnimation() {
+            webElement.style.animation = 'none';
+            webElement.offsetHeight; // Trigger reflow
+            webElement.style.animation = 'typing 3s steps(20, end), blink-caret .75s step-end infinite';
+        }
+
+        setInterval(resetAnimation, 3000);
+
+        // Leetcode 
+        async function fetchLeetcodeData() {
+            const resp = await fetch('https://leetcode-api-faisalshohag.vercel.app/vikrantlee')
+            const data = await resp.json()
+
+            // console.log(data)
+
+            document.getElementById('totalSolved').textContent = data.totalSolved;
+            document.getElementById('totalques').textContent = `Out of ${data.totalQuestions}`;
+            document.getElementById('solved').innerHTML = `<i class="fa-solid fa-check" style="color: #63E6BE; margin-right: 5px;"></i> Solved`;
+
+            document.getElementById('easySolved').textContent = `${data.easySolved}/${data.totalEasy}`;
+            document.getElementById('mediumSolved').textContent = `${data.mediumSolved}/${data.totalMedium}`;
+            document.getElementById('hardSolved').textContent = `${data.hardSolved}/${data.totalHard}`;
+        }
+        fetchLeetcodeData()
+
+        //Github
+        async function fetchgitdata() {
+            try {
+                const resp = await fetch('https://api.github.com/users/vikrant48')
+                if (!resp.ok) throw new Error("Network response was not ok");
+
+                const data = await resp.json()
+                console.log(data)
+
+                document.getElementById('avatar').src = data.avatar_url
+                document.getElementById('bio').textContent = data.bio
+                document.getElementById('public_repos').textContent = data.public_repos
+                document.getElementById('followers').textContent = data.followers
+                document.getElementById('created_on').textContent = new Date(data.created_at).toLocaleDateString()
+            } catch (error) {
+                console.error("Failed to fetch GitHub data:", error)
+            }
+        }
+        fetchgitdata()
+
+        // messege me 
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwBc2AAwFVXUS7FH32qJOvixVkuTxR9vNLxuwi204vhhcM7HR47Qc0FdSbSyt1jcfaAOg/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById("msg")
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault()
+            try {
+                let response = await fetch(scriptURL, {
+                    method: 'POST',
+                    body: new FormData(form)
+                })
+                if (response.ok) {
+                    msg.innerHTML = "Your message was sent successfully"
+                    setTimeout(() => msg.innerHTML = "", 500)
+                    form.reset()
+                } else {
+                    msg.innerHTML = "Error sending message"
+                    console.error('Error response:', response)
+                }
+            } catch (error) {
+                msg.innerHTML = "Submission failed"
+                console.error('Error!', error.message)
+            }
+        })
+
+    </script>
+</body>
 
 </html>
