--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
             </div>
 
             <!-- ✅ File upload field -->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="upload">Upload a document (optional):</label>
               <input
                 type="file"
@@ -969,7 +969,7 @@
                 name="upload"
                 accept=".pdf,.doc,.docx,.jpg,.png"
               />
-            </div>
+            </div> -->
 
             <div class="btn_cnt">
               <button type="submit" class="btn" id="sm">
